--- a/server/soap_protocol/Makefile.am
+++ b/server/soap_protocol/Makefile.am
@@ -8,55 +8,6 @@
 # $Date: $
 # $Revision: $
 
-
-Bindings.h:
-	wsdl2h -g -p -z1 Bindings.wsdl -o Bindings.h || test true
-	soapcpp2 -f50 -L -i Bindings.h || test true
-	
-soapBasicHttpBinding_USCOREIDiscoveryEndpointService.cpp,\
-soapBasicHttpBinding_USCOREIDiscoveryEndpointProxy.cpp,\
-soapBasicHttpBinding_USCOREIRegistrationEndpointService.cpp,\
-soapBasicHttpBinding_USCOREIRegistrationEndpointProxy.cpp,\
-soapBasicHttpBinding_USCOREISessionEndpointService.cpp,\
-soapBasicHttpBinding_USCOREISessionEndpointProxy.cpp,\
-soapC_001.cpp,\
-soapC_002.cpp, \
-soapC_003.cpp,\
-soapC_004.cpp,\
-soapC_005.cpp,\
-soapC_006.cpp,\
-soapC_007.cpp,\
-soapC_008.cpp,\
-soapC_009.cpp,\
-soapC_010.cpp,\
-soapC_011.cpp,\
-soapC_012.cpp,\
-soapC_013.cpp,\
-soapC_014.cpp,\
-soapC_015.cpp,\
-soapC_016.cpp,\
-soapC_017.cpp,\
-soapC_018.cpp,\
-soapC_019.cpp,\
-soapC_020.cpp,\
-soapC_021.cpp,\
-soapC_022.cpp,\
-soapC_023.cpp,\
-soapC_024.cpp,\
-soapC_025.cpp,\
-soapC_026.cpp,\
-soapC_027.cpp,\
-soapC_028.cpp,\
-soapC_029.cpp,\
-soapC_030.cpp,\
-soapC_031.cpp,\
-soapC_032.cpp,\
-soapC_033.cpp,\
-soapC_034.cpp,\
-src/discovery_service.cpp,\
-src/serialization/serialize.cpp,\
-src/serialization/deserialize.cpp: Bindings.h
-
 opcincludedir = $(includedir)/opc
 opcuaincludedir = $(opcincludedir)/ua
 uaclientincludedir = $(opcuaincludedir)/client
@@ -76,6 +27,98 @@ TESTLIBS = $(GTEST_LIB) $(GTEST_MAIN_LIB) $(GMOCK_LIBS)
 
 
 lib_LTLIBRARIES = libopcua_soap_protocol.la libopcua_soap_server.la libopcua_soap_client.la 
+
+Bindings.h:
+	wsdl2h -g -p -z1 Bindings.wsdl -o Bindings.h || test true
+	soapcpp2 -f50 -L -i Bindings.h || test true
+
+src/serialization/serialize.h: Bindings.h
+
+src/serialization/deserialize.cpp: Bindings.h
+
+src/serialization/serialize.cpp: Bindings.h
+
+src/namespaces.cpp: Bindings.h
+
+soapBasicHttpBinding_USCOREIDiscoveryEndpointProxy.cpp : Bindings.h
+
+soapBasicHttpBinding_USCOREIDiscoveryEndpointService.cpp : Bindings.h
+
+soapBasicHttpBinding_USCOREIRegistrationEndpointProxy.cpp : Bindings.h
+
+soapBasicHttpBinding_USCOREIRegistrationEndpointService.cpp : Bindings.h
+
+soapBasicHttpBinding_USCOREISessionEndpointProxy.cpp : Bindings.h
+
+soapBasicHttpBinding_USCOREISessionEndpointService.cpp : Bindings.h
+
+soapC_001.cpp : Bindings.h
+
+soapC_002.cpp : Bindings.h
+
+soapC_003.cpp : Bindings.h
+
+soapC_004.cpp : Bindings.h
+
+soapC_005.cpp : Bindings.h
+
+soapC_006.cpp : Bindings.h
+
+soapC_007.cpp : Bindings.h
+
+soapC_008.cpp : Bindings.h
+
+soapC_009.cpp : Bindings.h
+
+soapC_010.cpp : Bindings.h
+
+soapC_011.cpp : Bindings.h
+
+soapC_012.cpp : Bindings.h
+
+soapC_013.cpp : Bindings.h
+
+soapC_014.cpp : Bindings.h
+
+soapC_015.cpp : Bindings.h
+
+soapC_016.cpp : Bindings.h
+
+soapC_017.cpp : Bindings.h
+
+soapC_018.cpp : Bindings.h
+
+soapC_019.cpp : Bindings.h
+
+soapC_020.cpp : Bindings.h
+
+soapC_021.cpp : Bindings.h
+
+soapC_022.cpp : Bindings.h
+
+soapC_023.cpp : Bindings.h
+
+soapC_024.cpp : Bindings.h
+
+soapC_025.cpp : Bindings.h
+
+soapC_026.cpp : Bindings.h
+
+soapC_027.cpp : Bindings.h
+
+soapC_028.cpp : Bindings.h
+
+soapC_029.cpp : Bindings.h
+
+soapC_030.cpp : Bindings.h
+
+soapC_031.cpp : Bindings.h
+
+soapC_032.cpp : Bindings.h
+
+soapC_033.cpp : Bindings.h
+
+soapC_034.cpp: Bindings.h
 
 libopcua_soap_protocol_la_SOURCES = \
   Bindings.h \
@@ -131,6 +174,33 @@ libopcua_soap_protocol_la_CPPFLAGS = $(INCLUDES) -DWITH_PURE_VIRTUAL -DLINUX $(G
 libopcua_soap_protocol_la_LDFLAGS = $(UA_MAPPING_LIBS) $(GSOAP_LIBS) -ldl -lpthread  -Wl,--no-undefined
 
 
+src/discovery_service.cpp : Bindings.h
+
+src/discovery_service.h : Bindings.h
+
+src/endpoint_service.cpp : Bindings.h
+
+src/endpoint_service.h : Bindings.h
+
+src/registration_service.cpp : Bindings.h
+
+src/registration_service.h : Bindings.h
+
+src/soap_addon.cpp : Bindings.h
+
+src/soap_addon.h : Bindings.h
+
+src/soap_addon_factory.h : Bindings.h
+
+src/soap_module.cpp : Bindings.h
+
+src/soap_service.h : Bindings.h
+
+src/soap_server.cpp : Bindings.h
+
+src/soap_server.h : Bindings.h
+
+
 libopcua_soap_server_la_SOURCES = \
   src/discovery_service.cpp \
   src/discovery_service.h \
@@ -150,6 +220,9 @@ libopcua_soap_server_la_CPPFLAGS = $(INCLUDES) -DWITH_PURE_VIRTUAL -DLINUX $(GSO
 libopcua_soap_server_la_LIBADD = libopcua_soap_protocol.la
 libopcua_soap_server_la_LDFLAGS = $(OPC_CORE_LIBS) $(UA_MAPPING_LIBS) $(GSOAP_LIBS) -ldl -lpthread  -Wl,--no-undefined
 
+
+src/soap_client_addon.cpp: Bindings.h
+
 libopcua_soap_client_la_SOURCES = \
  src/soap_client_addon.cpp
 
@@ -160,8 +233,16 @@ libopcua_soap_client_la_LDFLAGS = $(OPC_CORE_LIBS) $(UA_MAPPING_LIBS) $(GSOAP_LI
 TESTS = test_soap
 check_PROGRAMS = test_soap
 
+tests/attributes.cpp: Bindings.h
+
+tests/browse.cpp: Bindings.h
+
+tests/get_endpoints.cpp: Bindings.h
+
+
 test_soap_SOURCES = \
-	tests/browse.cpp \
+  tests/attributes.cpp \
+  tests/browse.cpp \
   tests/get_endpoints.cpp
 
 
