SOAP: Added processing of read request to the endpoints service.

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>opc_layer_soap_suport</name>
+	<name>opcua-server</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -78,7 +78,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1386046082241</id>
+			<id>0</id>
 			<name></name>
 			<type>22</type>
 			<matcher>
