--- a/configure.ac
+++ b/configure.ac
@@ -6,15 +6,15 @@
 # http://www.gnu.org/licenses/lgpl.html)
 #
 
-AC_INIT
+AC_INIT([opcuaserver], [0.1.2], [rykovanov.as@gmail.com])
 AC_CONFIG_AUX_DIR([.])
 AC_CONFIG_SRCDIR([exe/src/server_main.cpp])
-AM_INIT_AUTOMAKE([opcua], [0.1.2], [rykovanov.as@gmail.com])
-LT_INIT([disable-static])
+AM_INIT_AUTOMAKE([-Wall -Werror])
 
-CXXFLAGS="-O0 -g -Wall -std=c++0x"
+CXXFLAGS="-O0 -g -std=c++0x"
 
 AC_PROG_CXX
+AM_PROG_AR
 AC_PROG_LIBTOOL
 PKG_PROG_PKG_CONFIG
 
@@ -61,13 +61,13 @@ AC_ARG_WITH([ua-mappings],
 AC_ARG_WITH([libopccore], 
             [AS_HELP_STRING([--with-libopccore=DIR], [defines path to the root directory of libopccore library.])],
             [ 
-              AC_SUBST([OPC_CORE_LIBS], ["-L$with_libopccore/.libs -lopccore -lxml2"])
+              AC_SUBST([OPC_CORE_LIBS], ["-L$with_libopccore/.libs -lopcuacore -lxml2"])
               AC_SUBST([OPC_CORE_INCLUDES], ["-I$with_libopccore/include -I/usr/include/libxml2"])
               AC_MSG_NOTICE([libopccore path: $with_libopccore]) 
             ], 
             [ 
               AC_SUBST([OPC_CORE_INCLUDES], ["-I/usr/include/libxml2"])
-              AC_SUBST([OPC_CORE_LIBS], ["-lopccore -lxml2"])
+              AC_SUBST([OPC_CORE_LIBS], ["-lopcuacore -lxml2"])
             ])
 
 AC_ARG_WITH([libopcuaclient], 
