--- a/endpoint_services/Makefile.am
+++ b/endpoint_services/Makefile.am
@@ -16,7 +16,7 @@ addonsincludedir = $(uaserverincludedir)/addons
 
 configdir = $(sysconfdir)/opcua
 
-INCLUDES= \
+COMMON_INCLUDES = \
   -Iinclude \
   -I$(top_srcdir)/services_registry/include \
   $(UA_MAPPING_INCLUDES) $(OPC_CORE_INCLUDES)
@@ -25,8 +25,10 @@ TESTINCLUDES = $(GTEST_INCLUDES) $(GMOCK_INCLUDES)
 
 
 lib_LTLIBRARIES = libendpoints_services_addon.la
+
 addonsinclude_HEADERS = \
   include/opc/ua/server/addons/endpoints_services.h
+
 libendpoints_services_addon_la_SOURCES = \
   src/endpoints_parameters.cpp \
   src/endpoints_parameters.h \
@@ -35,7 +37,7 @@ libendpoints_services_addon_la_SOURCES = \
   src/endpoints_services_factory.h \
   src/endpoints_services_module.cpp
   
-libendpoints_services_addon_la_CPPFLAGS = $(INCLUDES)
+libendpoints_services_addon_la_CPPFLAGS = $(COMMON_INCLUDES)
 libendpoints_services_addon_la_LDFLAGS = -lpthread -ldl  $(OPC_CORE_LIBS) $(UA_MAPPING_LIBS)
 
 ##############################################################################
@@ -56,6 +58,6 @@ test_endpoints_registry_SOURCES = \
   ../services_registry/src/services_registry_impl.cpp \
   ../services_registry/src/services_registry_impl.h
   
-test_endpoints_registry_CPPFLAGS = $(INCLUDES) $(TESTINCLUDES)
+test_endpoints_registry_CPPFLAGS = $(COMMON_INCLUDES) $(TESTINCLUDES)
 test_endpoints_registry_LDFLAGS = -lboost_thread -lpthread -ldl  $(UA_MAPPING_LIBS) $(OPC_CORE_LIBS) $(GTEST_LIB) $(GTEST_MAIN_LIB) $(GMOCK_LIBS) -Wl,-z,defs,-no-undefined
 
