Use author name instead of nick.

--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: opcuaserver
 Section: net
 Priority: extra
-Maintainer: treww <rykovanov.as@gmail.com>
+Maintainer: Alexander Rykovanov <rykovanov.as@gmail.com>
 Build-Depends: debhelper (>= 8.0.0), autotools-dev
 Standards-Version: 3.9.4
 Homepage: https://github.com/treww/opcua-server
